--- a/manuscript/ms.Rmd
+++ b/manuscript/ms.Rmd
@@ -120,7 +120,7 @@ There are many details to consider when starting to use NEON organismal data pro
 (ref:Fig1DesignCap) Generalized sampling schematics for Terrestrial Observation System (A) and Aquatic Observation System (B-D) plots. For Terrestrial Observation System (TOS) plots, Distributed, Tower, and Gradient plots, and locations of various sampling regimes, are presented via symbols. For Aquatic Observation System (AOS) plots, Wadeable streams, Non-wadeable streams, and Lake plots are shown in detail, with locations of sensors and different sampling regimes presented using symbols. Panel A was originally published in @thorpe2016introduction.
 
 ```{r, Fig1Design, fig.cap="(ref:Fig1DesignCap)"}
-include_graphics(here::here("manuscript/figures/fig_1.png"))
+include_graphics(here::here("manuscript/figures/fig_1_edit.png"))
 ```
 
 (ref:Table0MappingCap) Mapping NEON data products to ecocomDP formatted data packages with abundances _standardized_ to observation effort. IDs in the `L0 to L1 ecocomDP workflow ID` columns were used in the R package `ecocomDP` to standardize organismal data. Notes: \*Bird counts are reported per taxon per “cluster” observed in each point count in the NEON data product and have not been further standardized to sampling effort because standard methods for modeling bird abundances are beyond the scope of this paper; \*\* plants percent cover value `NA` represents presence/absence data only; \*\*\* incidence rate per number of tests conducted is reported for tick pathogens.
@@ -298,7 +298,7 @@ The fish NEON data product (`DP1.20107.001`) consists of `fsh_perPass`, `fsh_fie
 
 # Results (or how to get and use standardized NEON organismal data)
 
-All cleaned and standardized datasets can be obtained from the R package `neonDivData` and from the EDI data repository (temporary link, which will be finalized upon acceptance: <https://portal-s.edirepository.org/nis/mapbrowse?scope=edi&identifier=190&revision=2>). Note that `neonDivData` included both stable and provisional data released by NEON while the data repository in EDI only included stable datasets. If users want to change some of the decisions to wrangle the data differently, they can find the code in the R package `ecocomDP` and modify them for their own purposes.
+All cleaned and standardized datasets can be obtained from the R package `neonDivData` and from the EDI data repository (temporary link, which will be finalized upon acceptance: <https://portal-s.edirepository.org/nis/mapbrowse?scope=edi&identifier=190&revision=2>). Note that `neonDivData` included both stable and provisional data released by NEON while the data repository in EDI only included stable datasets. If users want to change some of the decisions to wrangle the data differently, they can find the code in the R package `ecocomDP` and modify them for their own purposes. If this standardized version of NEON data was used, users should cite this paper along with the citations provided by NEON for each taxonomic group. Such citations can be found in the URLs presented in Table \@ref(tab:dataMapping).
 
 The data package `neonDivData` can be installed from Github. Installation instructions can be found on the Github webpage (https://github.com/daijiang/neonDivData). Table \@ref(tab:dataSummary) shows the brief summary of all data objects. To get data for a specific taxonomic group, we can just call the objects in the `R object` column in Table \@ref(tab:dataSummary). Such data products include cleaned (and standardized if needed) occurrence data for the taxonomic groups covered and are equivalent to the “observation” table of the ecocomDP data format. If environmental information were provided by NEON for some taxonomic groups, they are also included in these data objects. Information such as latitude, longitude, and elevation for all taxonomic groups were saved in the `neon_location` object of the R package, which is equivalent to the “sampling_location” table of the ecocomDP data format. Information about species scientific names of all taxonomic groups were saved in the `neon_taxa` object, which is equivalent to the “taxon” table of the ecocomDP data format. 
 
