move a paragraph from discussion to methods

--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -781,3 +781,14 @@
   year={2020},
   institution={NEON (National Ecological Observatory Network)}
 }
+
+@article{qin2021dna,
+  title={From DNA sequences to microbial ecology: Wrangling NEON soil microbe data with the neonMicrobe R package},
+  author={Qin, Clara and Bartelme, Ryan and Chung, Y Anny and Fairbanks, Dawson and Lin, Yang and Liptzin, Daniel and Muscarella, Chance and Naithani, Kusum and Peay, Kabir and Pellitier, Peter and others},
+  journal={Ecosphere},
+  volume={12},
+  number={11},
+  pages={e03842},
+  year={2021},
+  publisher={Wiley Online Library}
+}
