--- a/manuscript/response.Rmd
+++ b/manuscript/response.Rmd
@@ -75,13 +75,18 @@ TO DO: add a paragraph in Results to demonstrate how to cite the standardized NE
 
 >How long into the future do you expect the data package will continue to be updated?  In line 161 it says: "Standardized datasets will be maintained and updated as new data become available from the NEON portal."  Who is doing this updating?  How long do you expect to do this (a rough estimate is fine).  Is this data package part of the NEON project, or is it an independent project, in terms of institutional and long-term support?
 
-This is a great point. This is an independent project as a collaboration among researchers and NEON staffs. 
+This is a great point. This is an independent project as a collaboration among researchers and NEON staff. 
 
 TO DO: Use Github Action to automatically update every year?
 
 >One question that I always think about with these types of datasets, and that the authors might be able to comment knowledgeably on, is about degrees of freedom.  In one of the examples in this manuscript (line 720), the authors write that the example "... shows the utility of the data package for exploring macroecological patterns at the NEON site level."  But if I understand correctly, there are only 81 NEON sites.  This means a site-level analysis of macroecological patterns has a sample size of 81 (surveys at a site are pooled to the site level).  With such a small sample size, degrees of freedom are a concern both within a single analysis (if multiple predictor variables area analyzed), and especially if many different researchers ask multiple questions of the same dataset.  It seems to me that the strength of the NEON data is in the intensive and repeated sampling done within sites, not in having a large number of sites.  Why do the authors think this dataset is well suited for analyses at the site level?  My guess is that the data are better suited to study questions for which the repeated samples at sites all provide some partially independent information, and can all contribute some (partial) degrees of freedom.  But I don't understand the NEON sampling scheme in detail, so maybe I am wrong about that.  In any case, since the authors provide a data package that could potentially encourage very many analyses, I think the manuscript would be strengthened by a brief discussion of the degrees of freedom issue in relation to the number of NEON sites, and how much we as a research community can actually learn from analyzing a dataset like this again and again to answer different questions.  
 
-This is again a great question. 81 sites may seem to be few, but each site contains incredible amount of details; with 81 replications distributed across continental scale, it is justfiable to study macroecological patterns.
+This is a good point and consideration of degrees of freedom is an important aspect of model fitting. We have toned down our language and the manuscript now reads as, "...show the utility of the data package for exploring macroecological patterns." We have left in our example of richness versus latitude as that only includes one predictor (latitude), and as the reviewer notes their concern mainly lies in analyses at the site level with more than one predictor. We feel that a thorough discussion of the various sample size considerations for analyses that could be performed with the NEON data or issues of Type I error associated with open source ecological data sets is beyond the scope of this manuscript, so we have not discussed this points in detail. However, we do agree that users of this data package should be well aware of considering sampling and sample size issues associated with the NEON data, so we have included a new reference to Barnett et al. (2019), which goes into great detail about various sample size issues associated with the NEON organismal data. Reference to this paper is now included in the last two sentences of the second paragraph of the Discussion section which reads as, "In a similar vein, researchers should ensure that they have considered sample size issues before fitting any models with these data. See Barnett et al. 2019 for a review of the NEON organismal sampling design that contains important insights related to sample size issues."
+
+Barnett, D. T., P. A. Duffy, D. S. Schimel, R. E. Krauss, K. M. Irvine, F. W. Davis, J. E. Gross, E. I. Azuaje,
+A. S. Thorpe, D. Gudex-Cross, M. Patterson, J. M. McKay, J. T. McCorkel, and C. L. Meier. 2019. The terrestrial organism
+and biogeochemistry spatial sampling design for the National Ecological Observatory Network. Ecosphere 10(2):e02540.
+10.1002/ecs2.2540
 
 >Minor comments:
 
